[project]
name = "pyarcfire"
version = "0.1.0"
description = "A port of SpArcFiRe, a spiral arc finder"
authors = [
    { name = "Pavadol Yamsiri" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { file = "License.txt" }
keywords = ["astronomy", "spiral", "arc", "finder"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Astronomy"
]

[project.urls]
Source = "https://github.com/pavyamsiri/pyarcfire.git"
Issues = "https://github.com/pavyamsiri/pyarcfire/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
typeCheckingMode = "standard"
